@@ -1,5 +1,7 @@
 package org.codehaus.stax.test.stream;
 
+import java.io.InputStream;
+
 import javax.xml.stream.*;
 
 /**
@@ -21,6 +23,24 @@ public class TestCommentRead
         XML = "  <root>  </root>  <!-- hee&haw - - -->";
         streamThrough(getReader(XML, true));
         streamThrough(getReader(XML, false));
+    }
+
+    // for [woodstox-58]: comment read outside main XML Ntree, after long (enough) CHARACTERS
+    // (probably also affect PIs)
+    public void testIssue58CommentRead() throws Exception
+    {
+        XMLInputFactory f = getNewInputFactory();
+        setCoalescing(f, true);
+        InputStream in = getClass().getResource("issue58.xml").openStream();
+        XMLStreamReader r = f.createXMLStreamReader(in);
+
+        // starts with couple of comments:
+        assertTokenType(COMMENT, r.next());
+        r.getText();
+        // but should be enough to stream and access contents
+        streamThrough(r);
+
+        in.close();
     }
 
     /**
@@ -192,11 +212,11 @@ public class TestCommentRead
                     break;
                 case 4:
                     method = "getNamespaceCount";
-                    result = new Integer(sr.getNamespaceCount());
+                    result = Integer.valueOf(sr.getNamespaceCount());
                     break;
                 case 5:
                     method = "getAttributeCount";
-                    result = new Integer(sr.getAttributeCount());
+                    result = Integer.valueOf(sr.getAttributeCount());
                     break;
                 case 6:
                     method = "getPITarget";
